# netlab-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lab-validate.yml  release.yml  security.yml
docs/: netlab-mcp-architecture.excalidraw
scripts/: gen_diagram.py  smoke_offline.py
src/netlab_mcp/: __init__.py  config.py  models.py  server.py
src/netlab_mcp/engine/: __init__.py  compat.py  images.py  lab.py  probes.py  render.py  runner.py  topo.py  topogen.py  transform.py  validation.py
src/netlab_mcp/store/: __init__.py  harvest.py  matrix.py  schema.sql
tests/: conftest.py  test_config.py  test_contract.py  test_hardening.py  test_harvest.py  test_host_check.py  test_http_auth.py  test_images.py  test_lab.py  test_lab_unit.py  test_matrix.py  test_mcp_tools.py  test_offline.py  test_probes.py  test_runner.py  test_topo.py  test_topogen.py  test_transform_parsing.py  test_validation.py
tests/fixtures/: mvp_bgp.yml  results_sample.yaml
