[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netlab-mcp"
version = "0.1.0"
description = "MCP server that wraps ipspace/netlab as an engine to serve validated, lab-tested network device configs to LLMs."
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0",
  "networklab>=26.06",
  "python-box>=7.2",
  "pydantic>=2",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
netlab-mcp = "netlab_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/netlab_mcp"]

[tool.pytest.ini_options]
markers = [
  "docker: requires docker + containerlab (the live lab path); skipped when absent",
]
testpaths = ["tests"]
